data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/sapm__193cdeb43a97/.c2r_bindgen_extern/audio_sapm_4672dfb0.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn strcmp(
        arg1: *const ::core::ffi::c_char,
        arg2: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn strlen(arg1: *const ::core::ffi::c_char) -> size_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DListHead {
    pub next: *mut DListHead,
    pub prev: *mut DListHead,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioCtrlElemId {
    pub cardServiceName: *const ::core::ffi::c_char,
    pub iface: i32,
    pub itemName: *const ::core::ffi::c_char,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioCtrlElemInfo {
    pub id: AudioCtrlElemId,
    pub count: u32,
    pub type_: i32,
    pub min: i32,
    pub max: i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioCtrlElemValue {
    pub id: AudioCtrlElemId,
    pub value: [u32; 2usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioEnumKcontrol {
    pub reg: u32,
    pub reg2: u32,
    pub shiftLeft: u8,
    pub shiftRight: u8,
    pub max: u32,
    pub mask: u32,
    pub texts: *const *const ::core::ffi::c_char,
    pub values: *const u32,
    pub sapm: *mut ::core::ffi::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioMixerControl {
    pub min: u32,
    pub max: u32,
    pub platformMax: i32,
    pub mask: u32,
    pub reg: u32,
    pub rreg: u32,
    pub shift: u32,
    pub rshift: u32,
    pub invert: u32,
    pub value: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioKcontrol {
    pub name: *mut ::core::ffi::c_char,
    pub iface: i32,
    pub Info: ::core::option::Option<
        unsafe extern "C" fn(
            kcontrol: *const AudioKcontrol,
            elemInfo: *mut AudioCtrlElemInfo,
        ) -> i32,
    >,
    pub Get: ::core::option::Option<
        unsafe extern "C" fn(
            kcontrol: *const AudioKcontrol,
            elemValue: *mut AudioCtrlElemValue,
        ) -> i32,
    >,
    pub Set: ::core::option::Option<
        unsafe extern "C" fn(
            kcontrol: *const AudioKcontrol,
            elemValue: *const AudioCtrlElemValue,
        ) -> i32,
    >,
    pub privateData: *mut ::core::ffi::c_void,
    pub pri: *mut ::core::ffi::c_void,
    pub privateValue: ::core::ffi::c_ulong,
    pub list: DListHead,
}
pub const DEVICE_CLASS_DEFAULT: DeviceClass = 1;
pub const DEVICE_CLASS_PLAT: DeviceClass = 2;
pub const DEVICE_CLASS_SENSOR: DeviceClass = 4;
pub const DEVICE_CLASS_INPUT: DeviceClass = 8;
pub const DEVICE_CLASS_DISPLAY: DeviceClass = 16;
pub const DEVICE_CLASS_AUDIO: DeviceClass = 32;
pub const DEVICE_CLASS_CAMERA: DeviceClass = 64;
pub const DEVICE_CLASS_USB: DeviceClass = 128;
pub const DEVICE_CLASS_USERAUTH: DeviceClass = 256;
pub const DEVICE_CLASS_HIMEDIACOMM: DeviceClass = 512;
pub const DEVICE_CLASS_MAX: DeviceClass = 1024;
pub type DeviceClass = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfObject {
    pub objectId: i32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfSBuf {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDeviceObject {
    pub service: *mut IDeviceIoService,
    pub property: *const DeviceResourceNode,
    pub deviceClass: DeviceClass,
    pub priv_: *mut ::core::ffi::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfDeviceIoClient {
    pub device: *mut HdfDeviceObject,
    pub priv_: *mut ::core::ffi::c_void,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IDeviceIoService {
    pub object: HdfObject,
    pub Open: ::core::option::Option<unsafe extern "C" fn(client: *mut HdfDeviceIoClient) -> i32>,
    pub Dispatch: ::core::option::Option<
        unsafe extern "C" fn(
            client: *mut HdfDeviceIoClient,
            cmdId: ::core::ffi::c_int,
            data: *mut HdfSBuf,
            reply: *mut HdfSBuf,
        ) -> i32,
    >,
    pub Release: ::core::option::Option<unsafe extern "C" fn(client: *mut HdfDeviceIoClient)>,
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_TYPE_MAX: LogType = 4;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeviceResourceAttr {
    pub name: *const ::core::ffi::c_char,
    pub value: *const ::core::ffi::c_char,
    pub next: *mut DeviceResourceAttr,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeviceResourceNode {
    pub name: *const ::core::ffi::c_char,
    pub hashValue: u32,
    pub attrData: *mut DeviceResourceAttr,
    pub parent: *mut DeviceResourceNode,
    pub child: *mut DeviceResourceNode,
    pub sibling: *mut DeviceResourceNode,
}
unsafe extern "C" {
    pub fn OsalMemCalloc(size: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct OsalMutex {
    pub realMutex: *mut ::core::ffi::c_void,
}
pub type errno_t = ::core::ffi::c_int;
unsafe extern "C" {
    pub fn memset_s(
        dest: *mut ::core::ffi::c_void,
        destMax: size_t,
        c: ::core::ffi::c_int,
        count: size_t,
    ) -> errno_t;
}
unsafe extern "C" {
    pub fn memcpy_s(
        dest: *mut ::core::ffi::c_void,
        destMax: size_t,
        src: *const ::core::ffi::c_void,
        count: size_t,
    ) -> errno_t;
}
unsafe extern "C" {
    pub fn snprintf_s(
        strDest: *mut ::core::ffi::c_char,
        destMax: size_t,
        count: size_t,
        format: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
pub const AUDIO_FORMAT_TYPE_PCM_8_BIT: AudioFormat = 1;
pub const AUDIO_FORMAT_TYPE_PCM_16_BIT: AudioFormat = 2;
pub const AUDIO_FORMAT_TYPE_PCM_24_BIT: AudioFormat = 3;
pub const AUDIO_FORMAT_TYPE_PCM_32_BIT: AudioFormat = 4;
pub const AUDIO_FORMAT_TYPE_AAC_MAIN: AudioFormat = 16777217;
pub const AUDIO_FORMAT_TYPE_AAC_LC: AudioFormat = 16777218;
pub const AUDIO_FORMAT_TYPE_AAC_LD: AudioFormat = 16777219;
pub const AUDIO_FORMAT_TYPE_AAC_ELD: AudioFormat = 16777220;
pub const AUDIO_FORMAT_TYPE_AAC_HE_V1: AudioFormat = 16777221;
pub const AUDIO_FORMAT_TYPE_AAC_HE_V2: AudioFormat = 16777222;
pub const AUDIO_FORMAT_TYPE_G711A: AudioFormat = 33554433;
pub const AUDIO_FORMAT_TYPE_G711U: AudioFormat = 33554434;
pub const AUDIO_FORMAT_TYPE_G726: AudioFormat = 33554435;
pub type AudioFormat = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioConfigData {
    pub cardServiceName: *const ::core::ffi::c_char,
    pub codecName: *const ::core::ffi::c_char,
    pub platformName: *const ::core::ffi::c_char,
    pub cpuDaiName: *const ::core::ffi::c_char,
    pub codecDaiName: *const ::core::ffi::c_char,
    pub dspName: *const ::core::ffi::c_char,
    pub dspDaiName: *const ::core::ffi::c_char,
}
pub const AUDIO_SAPM_TURN_STANDBY_LATER: AudioSapmTurnStandbyMode = 0;
pub const AUDIO_SAPM_TURN_STANDBY_NOW: AudioSapmTurnStandbyMode = 1;
pub const AUDIO_SAPM_TURN_STANDBY_BUTT: AudioSapmTurnStandbyMode = 2;
pub type AudioSapmTurnStandbyMode = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioCard {
    pub device: *mut HdfDeviceObject,
    pub rtd: *mut AudioRuntimeDeivces,
    pub configData: AudioConfigData,
    pub sapmComponents: *const AudioSapmComponent,
    pub sapmComponentsNum: i32,
    pub sapmRoutes: *const AudioSapmRoute,
    pub sapmRoutesNum: i32,
    pub list: DListHead,
    pub controls: DListHead,
    pub components: DListHead,
    pub paths: DListHead,
    pub sapmDirty: DListHead,
    pub standbyMode: AudioSapmTurnStandbyMode,
    pub time: u64,
    pub sapmSleepState: bool,
    pub sapmStandbyState: bool,
    pub sapmMonitorState: bool,
    pub sapmStandbyStartTimeFlag: bool,
    pub sapmSleepStartTimeFlag: bool,
}
pub const AUDIO_CAPTURE_STREAM: AudioStreamType = 0;
pub const AUDIO_RENDER_STREAM: AudioStreamType = 1;
pub type AudioStreamType = ::core::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioPcmStream {
    pub portDirection: u64,
    pub formats: u64,
    pub rates: u64,
    pub rateMin: u64,
    pub rateMax: u64,
    pub channelsMin: u64,
    pub channelsMax: u64,
    pub bufferBytesMax: u64,
    pub periodBytesMin: u64,
    pub periodBytesMax: u64,
    pub periodsMin: u64,
    pub periodsMax: u64,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioPortInfo {
    pub render: AudioPcmStream,
    pub capture: AudioPcmStream,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct PcmInfo {
    pub streamType: AudioStreamType,
    pub channels: u32,
    pub rate: u32,
    pub bitWidth: u32,
    pub frameSize: u32,
    pub isBigEndian: bool,
    pub isSignedData: bool,
    pub startThreshold: u32,
    pub stopThreshold: u32,
    pub silenceThreshold: u32,
    pub totalStreamSize: u32,
    pub interleaved: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioPcmHwParams {
    pub streamType: AudioStreamType,
    pub channels: u32,
    pub rate: u32,
    pub periodSize: u32,
    pub periodCount: u32,
    pub format: AudioFormat,
    pub cardServiceName: *const ::core::ffi::c_char,
    pub period: u32,
    pub frameSize: u32,
    pub isBigEndian: bool,
    pub isSignedData: bool,
    pub startThreshold: u32,
    pub stopThreshold: u32,
    pub silenceThreshold: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioMmapData {
    pub memoryAddress: *mut ::core::ffi::c_void,
    pub memoryFd: i32,
    pub totalBufferFrames: i32,
    pub transferFrameSize: i32,
    pub isShareable: i32,
    pub offset: u32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AudioRuntimeDeivces {
    pub codec: *mut CodecDevice,
    pub platform: *mut PlatformDevice,
    pub codecDai: *mut DaiDevice,
    pub cpuDai: *mut DaiDevice,
    pub dsp: *mut DspDevice,
    pub dspDai: *mut DaiDevice,
    pub complete: u8,
    pub frameBits: u32,
    pub dmaArea: *mut u8,
    pub bufferSize: ::core::ffi::c_ulong,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CodecDevice {
    pub devCodecName: *const ::core::ffi::c_char,
    pub devData: *mut CodecData,
    pub device: *mut HdfDeviceObject,
    pub list: DListHead,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CodecData {
    pub drvCodecName: *const ::core::ffi::c_char,
    pub Init: ::core::option::Option<
        unsafe extern "C" fn(audioCard: *mut AudioCard, codec: *const CodecDevice) -> i32,
    >,
    pub Read: ::core::option::Option<
        unsafe extern "C" fn(codec: *const CodecDevice, reg: u32, value: *mut u32) -> i32,
    >,
    pub Write: ::core::option::Option<
        unsafe extern "C" fn(codec: *const CodecDevice, reg: u32, value: u32) -> i32,
    >,
    pub controls: *mut AudioKcontrol,
    pub numControls: ::core::ffi::c_int,
    pub sapmComponents: *mut AudioSapmComponent,
    pub numSapmComponent: ::core::ffi::c_int,
    pub sapmRoutes: *const AudioSapmRoute,
    pub numSapmRoutes: ::core::ffi::c_int,
    pub virtualAddress: ::core::ffi::c_ulong,
    pub regConfig: *mut AudioRegCfgData,
    pub regCfgGroup: *mut *mut AudioRegCfgGroupNode,
    pub mutex: OsalMutex,
    pub privateParam: *mut ::core::ffi::c_void,
}
